the rest methods realized. getCityPopulation TODO